--- a/styles.css
+++ b/styles.css
@@ -198,18 +198,38 @@
 .container {
     display: flex;
 }
+.container-playlist {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+}
 .playlist {
-    margin-bottom: 10px;
-  }
-    .playlist a {
-      display: block;
-      background-color: #fff;
-      padding: 10px;
-      border-radius: 5px;
-      text-decoration: none;
-      color: #333;
-      transition: background-color 0.3s ease;
-    }
-    .playlist a:hover {
-      background-color: #eee;
-    }	
+  margin-bottom: 20px;
+}
+
+.playlist-box {
+  border: 1px solid #218d33;
+  padding: 10px;
+  text-align: center;
+  width: 200px;
+  height: 200px;
+}
+
+.playlist-box img {
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+}
+
+.playlist-box p {
+  margin: 10px 0;
+  font-weight: bold;
+}
+
+.playlist-header{
+color: #218d33;
+}
+
+.p-playlist{
+  color: #218d33;
+}
