--- a/styles.css
+++ b/styles.css
@@ -3,75 +3,69 @@
 
 /*background color*/
 
-    *{
-        padding: 0;
-        margin: 0;
-    }
+*{
+  padding: 0;
+  margin: 0;
+}
 
-	body {
-	    background-color:#1a1a1a;
-        font-family: 'Montserrat', sans-serif;
-	}
-    .about{
-        position: absolute;
-        bottom: 0;
-    }
-    .about ul li a{
-      color:lightgrey;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 15px;
-    }
-    .about ul li a:hover, .about ul li a:active, 
-    .about ul li a:focus{
-      color: white;
-    }
-    .sidebar{
-        position: fixed;
-        background-color: black;
-        width: 200px;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        padding: 20px;
+body {
+  background-color:#1a1a1a;
+  font-family: 'Montserrat', sans-serif;
+}
+.about{
+  position: absolute;
+  bottom: 0;
+}
+.about ul li a{
+  color:lightgrey;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 15px;
+}
+.about ul li a:hover, .about ul li a:active, .about ul li a:focus{
+  color: white;
+}
+.sidebar{
+  position: fixed;
+  background-color: black;
+  width: 200px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  padding: 20px;
+}
+.sidebar .navBar ul{
+  list-style: none;
+  margin-top: 25px;
+}
+.sidebar .navBar ul li{
+  padding: 15px 0px;
+}
+.sidebar .navBar ul li a{
+  color:lightgrey;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 15px;
+}
+.sidebar .navBar ul li .fa{
+  font-size: 20px;
+  margin-right: 15px;
+}
+.sidebar .navBar ul li a:hover, .sidebar .navBar ul li a:active, 
+.sidebar .navBar ul li a:focus{
+  color: white;
+}
+.sidebar .navBar ul li a:hover .fa, .sidebar .navBar ul li a:active .fa, 
+.sidebar .navBar ul li a:focus .fa{
+  color: white;
+}
 
-    }
-    .sidebar .navBar ul{
-        list-style: none;
-        margin-top: 25px;
+.container {
+  margin-left: 245px;
+  margin-bottom: 100px;
+}
 
-    }
-    .sidebar .navBar ul li{
-        padding: 15px 0px;
-
-    }
-    .sidebar .navBar ul li a{
-        color:lightgrey;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 15px;
-    }
-    .sidebar .navBar ul li .fa{
-        font-size: 20px;
-        margin-right: 15px;
-    }
-    .sidebar .navBar ul li a:hover, .sidebar .navBar ul li a:active, 
-    .sidebar .navBar ul li a:focus{
-        color: white;
-
-    }
-    .sidebar .navBar ul li a:hover .fa, .sidebar .navBar ul li a:active .fa, 
-    .sidebar .navBar ul li a:focus .fa{
-        color: white;
-
-    }
-
-    .container {
-      margin-left: 245px;
-      margin-bottom: 100px;
-    }
-
-    .topBar {
+.topBar {
   display: flex;
   justify-content: space-between;
   background-color: #101010;
@@ -136,74 +130,70 @@
   background-color: #f2f2f2;
 }
 
-
-
-    .thumbnail {
-    position: relative;
-    cursor: pointer;
-    margin: 10px;
-    
-	
+.thumbnail {
+  position: relative;
+  cursor: pointer;
+  margin: 10px;
 }
 .thumbnail-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; /* Center the thumbnails horizontally */
-    gap: 20px; /* Adjust the gap between thumbnails as needed */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Center the thumbnails horizontally */
+  gap: 20px; /* Adjust the gap between thumbnails as needed */
 }
 .playButton {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
-    display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  display: none;
 }
 
 .thumbnail:hover .playButton {
-    display: block;
+  display: block;
 }
 
 .playButton img {
-    width: 100%; 
-    height: 100%;
+  width: 100%; 
+  height: 100%;
 }
 
 .songInfo {
-    text-align: center;
-    margin-top: 5px;
-    color: whitesmoke;
+  text-align: center;
+  margin-top: 5px;
+  color: whitesmoke;
 }
 
 #playerWindow {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #f1f1f1;
-    padding: 10px;
-    display: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 10px;
+  display: none;
 }
 
 #audioPlayer {
-    width: 100%;
+  width: 100%;
 }
 
 #playerDetails {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
 }
 
 #playerThumbnail {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
 }
 
 #playerSongInfo {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 /* Header Styles */
 .header {
